last commit for today, got stuck at the issue with async at line 31 handleClickPpsitive App.jsx Suggested work around in the article does not seem to work

--- a/part1/unicafe/src/App.css
+++ b/part1/unicafe/src/App.css
@@ -6,7 +6,7 @@
   display:flex;
   flex-direction: column;
   align-items: center;
-  background-color: rgba(246, 248, 218, 0.595);
+  background-color: rgba(0, 0, 0, 0.595);
   margin-inline: auto;
 
 }
@@ -16,7 +16,7 @@
   box-sizing: border-box;
   block-size:80px;
   inline-size: 100%;
-  background-image:linear-gradient(to bottom, rgb(21, 16, 24), rgba(34, 33, 14, 0.5));
+  background-image:linear-gradient(to bottom, rgb(0, 255, 255), 10%,rgba(0,0,0,.4),95%, rgb(255, 0 , 255)100%);
   justify-content: center;
   align-items: center;
   color:aliceblue;
